@@ -1,3 +1,6 @@
+10/11/11 show precipitate as a random group of particles at the bottom of the beaker
+10/11/11 format solute combo box as "formula: name"
+10/11/11 show solute formula on beaker
 10/11/11 different solutes have different precipitate sizes
 10/10/11 show precipitate numerically
 10/10/11 make beaker an observer of solution volume property
